--- a/wiki/ModelClinical.wiki
+++ b/wiki/ModelClinical.wiki
@@ -2,18 +2,18 @@
 
 = Clinical models =
 
-In openmalaria, the [ModelPathogenesis Pathogenesis models] determine if an individual becomes sick, and whether the sickness is uncomplicated or severe. The clinical models determine whether and how the sickness is treated and how long it lasts. There are two implementations of the clinical models, described below. The first model uses a 5-day time step, the second a 1-day time step. In the former, clinical and parasitological outcomes are predicted within the model, whereas the latter works together with the models for [ModelDrug Drug Action], severe outcomes, and [ModelWithinHost Within-Host Dynamics] to predict these outcomes.
+In openmalaria, the [ModelPathogenesis Pathogenesis models] determine if an individual becomes sick, and whether the sickness is uncomplicated or severe. The clinical models determine whether and how the sickness is treated and how long it lasts. There are two implementations of the clinical models, described below. The first model uses a five-day time step, the second a one-day time step. In the former, clinical and parasitological outcomes are predicted within the model, whereas the latter works together with the models for [ModelDrug Drug Action], severe outcomes, and [ModelWithinHost Within-Host Dynamics] to predict these outcomes.
 
 === Notation ===
-Due to confusion of terms while adapting the clinical model for a 1-day timestep, we have developed the following notation:
+Due to confusion of terms while adapting the clinical model for a one-day timestep, we have developed the following notation:
 
- * event -- an occurrence without measurable duration (can be a bout in the 5-day time step model since the whole bout occurs on a single time step, but in the 1-day time step model an event is strictly a state-change). 
+ * event -- an occurrence without measurable duration (can be a bout in the five-day time step model since the whole bout occurs on a single time step, but in the one-day time step model an event is strictly a state-change). 
 
- * bout -- a "bout of sickness" describes a fever or similar sickness, malarial or otherwise, and usually no more than 5 days long.
+ * bout -- a "bout of sickness" describes a fever or similar sickness, malarial or otherwise, and usually no more than five days long.
 
- * episode -- the health-system's reporting unit; each bout is either considered the start of a new episode, or, if occurring within healthSystemMemory (30 days in old model) of the start of the last episode, considered part of that episode. Thus, at least with low transmission, an episode should roughly correspond to bouts caused by one malaria infection. An episode's severity (non-malarial, malarial or severe) is considered equal to that of its worst bout. 
+ * episode -- the health-system's reporting unit; each bout is either considered the start of a new episode, or, if occurring within healthSystemMemory (30 days in the old model) of the start of the last episode, considered part of that episode. Thus, at least with low transmission, an episode should roughly correspond to bouts caused by one malaria infection. An episode's severity (non-malarial, malarial or severe) is considered equal to that of its worst bout. 
 
-== 5-day timestep ==
+== Five-day timestep ==
 
 [http://www.ncbi.nlm.nih.gov/pubmed/16931820 Tediosi et al, 2006] (implemented by the ClinicalImmediateOutcomes class) presented a clinical model for the case management of malaria. In this decision tree model there are three entry points: uncomplicated clinical malaria with no recent history of treatment, uncomplicated clinical malaria with recent history of treatment, and severe malaria. “Recent history” is defined as within the last 30 days.
 
@@ -23,9 +23,9 @@ An initial bout of uncomplicated clinical malaria may either be treated at home 
 
 Predictions are made across a range of different transmission intensities, by varying the entomological inoculation rate, and across case management scenarios with different coverage rates, by varying the decision tree probabilities.
 
-== 1-day timestep ==
+== One-day timestep ==
 
-The Crowell et al model (paper not yet published; implemented by the ClinicalEventScheduler class) is an adaptation of the above [http://www.ncbi.nlm.nih.gov/pubmed/16931820 Tediosi et al model] to a 1-day time step. We break the model down into two components: clinical scheduler and clinical decisions. 
+The Crowell et al model (paper not yet published; implemented by the ClinicalEventScheduler class) is an adaptation of the above [http://www.ncbi.nlm.nih.gov/pubmed/16931820 Tediosi et al model] to a one-day time step. We break the model down into two components: clinical scheduler and clinical decisions. 
 
 Moving to a one-day time step implied the need for a clinical scheduler to mediate between the [ModelPathogenesis Pathogenesis], clinical decisions and severe outcomes models. The clinical scheduler decides and tracks the actual clinical state of the individual, based on the state as determined by the pathogenesis model and recent treatment history, allocates individuals to the clinical decisions and severe outcomes models as necessary, and determines final clinical outcomes.
 
@@ -35,9 +35,9 @@ The clinical decisions component of the model (implemented in the ESCaseManageme
 
 In this model, each individual is assigned a state which lasts until the next event. The states are healthy, uncomplicated malarial fever, uncomplicated non-malarial fever, severe malaria, and dead. The corresponding events are start of an uncomplicated fever, start of severe malaria (from healthy or uncomplicated fever states), direct death, and recovery. Transitions from severe malaria to uncomplicated fever are not allowed.
 
-A _bout_ commences with a morbidity _event_ and concludes with a recovery or mortality _event_ (stressing terminology used). When the bout first occurs, the clinical scheduler calls the case management model. At the start of an uncomplicated fever, we model a potential treatment-seeking delay. In this model, the bout duration of uncomplicated malarial fevers and non-malarial fevers is fixed at 3 days from the time of seeking treatment, or from the start of illness (if treatment is not sought). If an individual delays seeking treatment for one or two days, bout duration becomes 4 or 5 days, respectively. During this time, the clinical scheduler maintains the individual in the same state, unless the [ModelPathogenesis Pathogenesis models] indicate that the illness has progressed to severe. After this time period, it is assumed that parasite densities have been reduced by treatment or immunity. 
+A _bout_ commences with a morbidity _event_ and concludes with a recovery or mortality _event_ (stressing terminology used). When the bout first occurs, the clinical scheduler calls the case management model. At the start of an uncomplicated fever, we model a potential treatment-seeking delay. In this model, the bout duration of uncomplicated malarial fevers and non-malarial fevers is fixed at three days from the time of seeking treatment, or from the start of illness (if treatment is not sought). If an individual delays seeking treatment for one or two days, bout duration becomes four or five days, respectively. During this time, the clinical scheduler maintains the individual in the same state, unless the [ModelPathogenesis Pathogenesis models] indicate that the illness has progressed to severe. After this time period, it is assumed that parasite densities have been reduced by treatment or immunity. 
 
-While healthy or during an uncomplicated bout, a severe bout may commence. In this case, the clinical scheduler calls the case management model and cancels any recent drug treatment. The severe bout is fixed at 5 days long when the patient enters hospital immediately or not at all; a 1-day delay to hospital entry is also considered possible which increases the bout length to 6 days. 
+While healthy or during an uncomplicated bout, a severe bout may commence. In this case, the clinical scheduler calls the case management model and cancels any recent drug treatment. The severe bout is fixed at five days long when the patient enters hospital immediately or not at all; a one-day delay to hospital entry is also considered possible which increases the bout length to six days. 
 
 Mortality is possible during severe malaria bouts, and considered as a stochastic function of the proportional reduction in parasite density each day of the case (TODO: link article). Each day during the severe illness, the clinical scheduler calls the severe outcomes model, which applies the appropriate case fatality rate to determine whether or not the individual died that day. For delayed hospital entry, the community death rate takes effect on the first day. To simplify costing of hospital stays, mortality events are always modeled as happening at the end of the associated severe episode.
 
@@ -49,7 +49,7 @@ The [http://www.ncbi.nlm.nih.gov/pubmed/16931820 Tediosi et al model] was revise
 
 ====Uncomplicated fever====
 
-At the start of an uncomplicated fever, we model a potential treatment-seeking delay. The simulated individual has a fixed chance of seeking treatment immediately, or, if yet to do so, on the following two days. If treatment is not sought on all three occasions, the individual reverts to the healthy state. When the individual does seek treatment, the uncomplicated case management tree determines any treatments taken, and the individual is deemed to recover 3 days from the time of treatment-seeking.
+At the start of an uncomplicated fever, we model a potential treatment-seeking delay. The simulated individual has a fixed chance of seeking treatment immediately, or, if yet to do so, on the following two days. If treatment is not sought on all three occasions, the individual reverts to the healthy state. When the individual does seek treatment, the uncomplicated case management tree determines any treatments taken, and the individual is deemed to recover three days from the time of treatment-seeking.
 
 The decision tree provides a more detailed description of treatment-seeking than the previous model, including from the informal sector. It accounts for sub-optimal provider compliance to treatment guidelines and varying quality of drugs and describes patient adherence more precisely by modeling vomiting, stopping treatment early, and selective adherence.
 
