Edited wiki page through web user interface.
git-svn-id: https://openmalaria.googlecode.com/svn@1203 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/wiki/ModelNeonatal.wiki
+++ b/wiki/ModelNeonatal.wiki
@@ -4,4 +4,4 @@
 
 code: NeonatalMortality class.
 
-A model relating <i>P. falciparum</i> malaria transmission to indirect malaria deaths in the neonatal period caused by infections in pregnant women. Pregnancies are not simulated, instead the model has two components relating (i) the prevalence of <i>P. falciparum</i> in the general population to the prevalence in primigravidae and (ii) the prevalence in primigravidae to indirect malaria neonatal mortality. The model is presented in: [http://www.ajtmh.org/cgi/content/abstract/75/2_suppl/74 Ross, Smith; 2006]
+A model relating <i>P. falciparum</i> malaria transmission to indirect malaria deaths in the neonatal period caused by infections in pregnant women. Pregnancies are not simulated, instead the model has two stages relating (i) the prevalence of <i>P. falciparum</i> in the general population to the prevalence in primigravidae and (ii) the prevalence in primigravidae to indirect malaria neonatal mortality. The model is presented in: [http://www.ajtmh.org/cgi/content/abstract/75/2_suppl/74 Ross, Smith; 2006]
