Edited wiki page through web user interface.
git-svn-id: https://openmalaria.googlecode.com/svn@1204 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/wiki/ModelClinical.wiki
+++ b/wiki/ModelClinical.wiki
@@ -33,7 +33,7 @@ The clinical decisions component of the model (implemented in the ESCaseManageme
 
 ===Clinical scheduler===
 
-In this model, each individual is assigned a state which lasts until the next event. The states are healthy, uncomplicated malarial fever, uncomplicated non-malarial fever, severe malaria, and dead. The corresponding events are start of an uncomplicated fever, start of severe malaria (from healthy or uncomplicated fever states), direct death, and recovery. Transitions from severe malaria to uncomplicated fever are not allowed.
+In this model, each individual is assigned a state which lasts until the next event. The states are healthy, uncomplicated malarial fever, uncomplicated non-malarial fever, severe malaria, and dead. The corresponding events are start of an uncomplicated fever (malarial or non-malarial), start of severe malaria (from healthy or uncomplicated fever states), direct death, and recovery. Transitions from severe malaria to uncomplicated fever are not allowed.
 
 A _bout_ commences with a morbidity _event_ and concludes with a recovery or mortality _event_ (stressing terminology used). When the bout first occurs, the clinical scheduler calls the case management model. At the start of an uncomplicated fever, we model a potential treatment-seeking delay. In this model, the bout duration of uncomplicated malarial fevers and non-malarial fevers is fixed at three days from the time of seeking treatment, or from the start of illness (if treatment is not sought). If an individual delays seeking treatment for one or two days, bout duration becomes four or five days, respectively. During this time, the clinical scheduler maintains the individual in the same state, unless the [ModelPathogenesis Pathogenesis models] indicate that the illness has progressed to severe. After this time period, it is assumed that parasite densities have been reduced by treatment or immunity. 
 
